<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/where_did_a_violation_occur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_did_a_violation_occur"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <CheckBox
        android:id="@+id/messagesBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages"
        android:textColor="@color/primaryText"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toStartOf="@+id/filesBox"
        app:layout_constraintTop_toBottomOf="@+id/where_did_a_violation_occur"/>
    <CheckBox
        android:id="@+id/filesBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/files"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_11ssp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/where_did_a_violation_occur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
        android:id="@+id/eventsBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_11ssp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@+id/filesBox"
        app:layout_constraintTop_toBottomOf="@+id/where_did_a_violation_occur"/>
    <TextView
        android:id="@+id/report_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_reason"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filesBox"/>

    <CheckBox
        android:id="@+id/contentBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_11ssp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        app:layout_constraintTop_toBottomOf="@+id/report_reason"
        app:layout_constraintEnd_toStartOf="@+id/centerHelp"/>
    <TextView
        android:id="@+id/centerHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
        android:id="@+id/spamBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spam"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_11ssp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@+id/centerHelp"
        app:layout_constraintTop_toBottomOf="@+id/report_reason"/>
    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_icon_light"
        android:padding="@dimen/_6sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentBox"
        android:autofillHints="description"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:textSize="@dimen/_11ssp"
        android:hint="@string/description_optional"/>
</androidx.constraintlayout.widget.ConstraintLayout>