<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:src="@drawable/baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/forgot_pw_title"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:paddingStart="@dimen/_14sdp"
        android:paddingEnd="@dimen/_14sdp"
        android:text="@string/provide_your_accounts_email_address_and_we_will_send_you_a_link_to_reset_your_password"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/background_input"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_12sdp"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_22sdp"
        android:background="@drawable/background_icon"
        android:drawableStart="@drawable/baseline_lock_reset_24"
        android:drawablePadding="@dimen/_12sdp"
        android:drawableTint="@color/white"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/_65sdp"
        android:text="@string/reset_pw"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@drawable/background_icon_light"
        android:drawableStart="@drawable/baseline_arrow_back_ios_24"
        android:drawablePadding="@dimen/_12sdp"
        android:drawableTint="@color/primaryText"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/_90sdp"
        android:text="@string/back"
        android:textColor="@color/primaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />
</androidx.constraintlayout.widget.ConstraintLayout>